--- a/app/src/main/res/layout/fragment_drafts.xml
+++ b/app/src/main/res/layout/fragment_drafts.xml
@@ -56,7 +56,8 @@
         android:id="@+id/button_expandable_110_250"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="50dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="15dp"
         android:src="@drawable/ic_add_symbol"
         app:aebAnimDurationMillis="175"
         app:aebButtonElevation="7dp"
@@ -74,6 +75,7 @@
         android:id="@+id/AddVoiceButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="30dp"
         android:layout_marginBottom="20dp"
         android:src="@drawable/ic_recorder_microphone"
         app:aebAnimDurationMillis="175"
@@ -93,7 +95,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginRight="20dp"
-        android:layout_marginBottom="50dp"
+        android:layout_marginBottom="30dp"
         android:src="@drawable/ic_text"
         app:aebAnimDurationMillis="175"
         app:aebButtonElevation="7dp"
