--- a/app/src/main/res/layout/activity_add_medicine_page.xml
+++ b/app/src/main/res/layout/activity_add_medicine_page.xml
@@ -39,12 +39,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="40dp"
         android:fontFamily="@font/montserrat"
-        android:text="@string/TitleApp"
+        android:text="Name"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/Add_Medicine" />
 
     <EditText
         android:id="@+id/nameET"
@@ -84,7 +84,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
         android:fontFamily="@font/montserrat"
-        android:text="@string/SDMed"
+        android:text="Start"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -92,15 +92,17 @@
 
     <Button
         android:id="@+id/MFromDays"
-        android:layout_width="100dp"
+        android:layout_width="0dp"
         android:layout_height="40dp"
-        android:layout_marginStart="100dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="32dp"
         android:background="@drawable/custom_edit_text"
         android:elevation="0dp"
         android:fontFamily="@font/montserrat"
-        android:text="@string/StartMedDate"
+        android:text="Set Date"
         android:textSize="15dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/calIcon"
         app:layout_constraintTop_toBottomOf="@+id/DateTV" />
 
@@ -218,89 +220,98 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/MedicineDose"
-        android:layout_marginEnd="7dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="32dp"
         android:fontFamily="@font/montserrat"
         android:text="@string/RepMed"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/textView2"
-        app:layout_constraintEnd_toStartOf="@+id/repeatInterval"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/pillIcon"
-        app:layout_constraintTop_toBottomOf="@+id/pillIcon"
-        app:layout_constraintVertical_bias="0.673" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/pillIcon" />
 
     <Spinner
         android:id="@+id/repeatType"
-        android:layout_width="130dp"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="40dp"
         android:layout_below="@id/RepeatView"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="18dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="32dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="32dp"
+        android:backgroundTint="@color/darkAccent"
         android:ems="10"
         android:fontFamily="@font/montserrat"
-        app:layout_constraintBottom_toTopOf="@+id/button"
-        app:layout_constraintEnd_toStartOf="@+id/repeatNO"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/repeatInterval"
-        app:layout_constraintTop_toBottomOf="@+id/RepeatView"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/RepeatView" />
+
+    <ImageView
+        android:id="@+id/repeatIcon"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="10dp"
+        android:src="@drawable/ic_repeat"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/RepeatView" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/RepeatView"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="15dp"
         android:fontFamily="@font/montserrat"
         android:text="@string/EvMed"
-        app:layout_constraintStart_toStartOf="@+id/RepeatView"
-        app:layout_constraintTop_toTopOf="@+id/repeatInterval" />
+        android:textSize="18sp"
+        app:layout_constraintStart_toEndOf="@+id/repeatIcon"
+        app:layout_constraintTop_toBottomOf="@+id/RepeatView" />
 
     <EditText
         android:id="@+id/repeatInterval"
         android:layout_width="50dp"
-        android:layout_height="30dp"
+        android:layout_height="40dp"
         android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="52dp"
+        android:layout_marginTop="8dp"
         android:background="@drawable/custom_edit_text"
         android:ems="10"
         android:inputType="number"
         android:text=""
         android:textAlignment="center"
-        app:layout_constraintBottom_toTopOf="@+id/button"
-        app:layout_constraintEnd_toStartOf="@+id/repeatType"
-        app:layout_constraintStart_toEndOf="@+id/textView2" />
+        app:layout_constraintStart_toEndOf="@+id/textView2"
+        app:layout_constraintTop_toBottomOf="@+id/RepeatView" />
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="15dp"
         android:fontFamily="@font/montserrat"
         android:text="@string/timesMed"
+        android:textSize="18sp"
         app:layout_constraintStart_toEndOf="@+id/repeatNO"
-        app:layout_constraintTop_toTopOf="@+id/repeatInterval" />
+        app:layout_constraintTop_toBottomOf="@+id/repeatType" />
 
     <EditText
         android:id="@+id/repeatNO"
         android:layout_width="50dp"
-        android:layout_height="30dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="52dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:background="@drawable/custom_edit_text"
         android:ems="10"
         android:inputType="number"
         android:text=""
         android:textAlignment="center"
-        app:layout_constraintBottom_toTopOf="@+id/button"
-        app:layout_constraintEnd_toStartOf="@+id/textView3" />
+        app:layout_constraintStart_toEndOf="@+id/textView2"
+        app:layout_constraintTop_toBottomOf="@+id/repeatInterval" />
 
     <Button
         android:id="@+id/button"
         android:layout_width="250dp"
         android:layout_height="35dp"
-        android:layout_marginBottom="40dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="28dp"
         android:background="@drawable/main_button"
         android:fontFamily="@font/montserrat"
         android:padding="3dp"
@@ -311,6 +322,8 @@
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/repeatNO" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
