--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -125,6 +125,7 @@
         android:layout_height="70dp"
         android:orientation="horizontal"
         android:paddingEnd="10dp"
+        android:elevation="10dp"
         android:background="@drawable/upper_bar"
         app:layout_constraintBottom_toTopOf="@+id/nav_host_fragment"
         app:layout_constraintEnd_toEndOf="parent"
@@ -213,7 +214,7 @@
             android:layout_marginStart="120dp"
             android:layout_marginTop="70dp"
             android:layout_marginEnd="60dp"
-            android:elevation="5dp"></androidx.recyclerview.widget.RecyclerView>
+            android:elevation="5dp"/>
 
         <LinearLayout
             android:id="@+id/outside_notification_box"
@@ -232,6 +233,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"
+        android:elevation="10dp"
+        app:elevation="10dp"
         app:itemTextColor="@drawable/nav_item_background"
         app:itemIconTint="@drawable/nav_item_background"
         app:layout_constraintBottom_toBottomOf="parent"
