--- a/app/src/main/res/layout/fragment_sociodemo.xml
+++ b/app/src/main/res/layout/fragment_sociodemo.xml
@@ -17,11 +17,14 @@
         android:id="@+id/titleofscreen"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/montserrat"
+        android:layout_alignBottom="@+id/white_bg"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="40dp"
-        android:text="Socio-demographic\nInformation"
+        android:layout_marginTop="0dp"
+        android:layout_marginBottom="0dp"
+        android:fontFamily="@font/montserrat"
         android:gravity="center"
+        android:text="About You"
         android:textColor="#000000"
         android:textSize="25sp" />
 
