--- a/app/src/main/res/layout/my_doctor.xml
+++ b/app/src/main/res/layout/my_doctor.xml
@@ -157,10 +157,8 @@
 
     <Button
         android:id="@+id/delete"
-        android:layout_width="0dp"
+        android:layout_width="250dp"
         android:layout_height="35dp"
-        android:layout_marginStart="140dp"
-        android:layout_marginEnd="8dp"
         android:layout_marginBottom="70dp"
         android:background="@drawable/delete_button"
         android:fontFamily="@font/montserrat"
@@ -171,7 +169,7 @@
         android:textColor="@color/white"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/SaveChanges"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
