--- a/app/src/main/res/drawable-v24/main_background.xml
+++ b/app/src/main/res/drawable-v24/main_background.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <gradient
-        android:startColor="@color/colorAccent"
-        android:endColor="@color/colorPrimary"
+        android:startColor="@color/darkAccent"
+        android:endColor="@color/colorAccent"
         />
 
     <corners></corners>
