--- a/app/src/main/res/drawable/upper_bar.xml
+++ b/app/src/main/res/drawable/upper_bar.xml
@@ -3,7 +3,9 @@
 <item>
 
     <shape android:shape="rectangle">
-        <solid android:color="#F3F3F3"/>
+        <solid android:color="#FFFFFF"/>
+        <corners android:bottomLeftRadius="15dp"
+            android:bottomRightRadius="15dp"/>
 
     </shape>
 </item>
