--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     android:id="@+id/MainActivity"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    android:background="@color/darkAccent"
     android:orientation="vertical"
     >
 
@@ -122,12 +123,13 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/white_bg"
         android:layout_width="match_parent"
-        android:layout_height="70dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:background="@drawable/upper_bar"
+        android:elevation="10dp"
         android:orientation="horizontal"
         android:paddingEnd="10dp"
-        android:elevation="10dp"
-        android:background="@drawable/upper_bar"
-        app:layout_constraintBottom_toTopOf="@+id/nav_host_fragment"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -135,7 +137,7 @@
 
         <ImageView
             android:id="@+id/logoMain"
-            android:layout_width="120dp"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:src="@drawable/serene_logo_main"
@@ -189,9 +191,10 @@
         app:layout_constraintBottom_toTopOf="@+id/nav_view"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/white_bg"
+        app:layout_constraintTop_toTopOf="parent"
         app:navGraph="@navigation/mobile_navigation"
-        tools:ignore="MissingConstraints" />
+
+         />
 
 
     <RelativeLayout
