--- a/app/src/main/res/layout/fragment_drafts.xml
+++ b/app/src/main/res/layout/fragment_drafts.xml
@@ -14,6 +14,7 @@
         android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:layout_gravity="center"
+        android:layout_marginTop="60dp"
         android:fontFamily="@font/montserrat"
         android:gravity="center"
         android:paddingTop="10dp"
