--- a/app/src/main/res/layout/fragment_report.xml
+++ b/app/src/main/res/layout/fragment_report.xml
@@ -18,6 +18,7 @@
         android:text="@string/generate_report"
         android:gravity="center"
         android:layout_gravity="center"
+        android:layout_marginTop="60dp"
         android:textColor="@color/black"
         android:textSize="25sp" />
 
